force-app/main/default/objects/custom_create45__c/custom_create45__c.object-meta.xml
<CustomObject>
    <label>Custom created object45</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects45</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>