force-app/main/default/objects/custom_create45__c/fields/custom_create_45field690__c.field-meta.xml
<CustomField>
    <fullName>custom_create_45field690__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 45field690</label>
    <type>Checkbox</type>
</CustomField>